--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ header{
     margin: auto;
     font-family: Inter ,sans-serif;
     border: 1px solid rgb(74, 72, 72) ;
-    margin-top: 50px;
-    margin-bottom: 50px;  
+    margin-top: 15px;
+    margin-bottom: 10px;  
     width: 90%;  
 }
 body {
@@ -38,18 +38,18 @@ footer{
 }
 /* ============================================================================================================================== */
 main {
-    padding-top: 50px;
     color: rgb(255, 253, 253);
     border: 1px solid rgb(209, 214, 222) ;
     width: 90%;
+    max-width: 600;
     border-radius: 30px;
     margin: auto;
     /* Outer Glow */
-    border:1px solid rgb(197, 174, 44);
-    box-shadow: 0 0 20px rgb(236, 230, 30);
-    padding: 50px;
-    
-
+    /* border:1px solid rgb(197, 174, 44);
+    box-shadow: 0 0 20px rgb(236, 230, 30); */
+    height: 100%;
+    padding-top: 10px;
+    padding-bottom: 0px;
 }
 .footerMenu{
     display: flex;
@@ -69,7 +69,7 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 .input-group{
     position: relative;
