--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ footer{
 /* ============================================================================================================================== */
 main {
     color: rgb(255, 253, 253);
-    border: 1px solid rgb(209, 214, 222) ;
+    /* border: 1px solid rgb(209, 214, 222) ; */
     width: 90%;
     max-width: 600;
     border-radius: 30px;
