--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin-bottom: 20px;
+    gap: 10px;
+    margin-bottom: 5px;
 }
 .Login{
     display: flex;
@@ -75,6 +75,7 @@ main {
     position: relative;
     margin: 10px 0;
     border-bottom:2px solid white;
+
 }
 .input-group label{
     position:absolute;
@@ -102,7 +103,7 @@ main {
 }
 button {
   position: relative;
-  width: 60%;
+  width: 200px;
   height: 40px;
   background: rgb(234, 220, 20);
   /* box-shadow: 0 0 10px rgb(226, 255, 6); */
