--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ input:-webkit-autofill:active {
     color: white;
     font-size: 15px;
     margin: 10px 200px 0px 0px;
+    margin-bottom: 15px;
 }
 .rem label input{
     color: #FACC15;
