--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ main {
     height: 40px;
     color: rgb(243, 249, 47);
     padding: 0.5px;
+    font-size: 16px;
     background: transparent;
     border: none;
     outline: none;
