--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ main {
     flex-direction: row;
     gap: 10px;
     margin-bottom: 15px;
+    font-size: 15px;
 }
 .SignUp{
     display: flex;
@@ -152,6 +153,7 @@ input:-webkit-autofill:active {
     margin: 15px 15px;
     color: rgb(234, 220, 20);
     text-align: center;
+    font-size: 15px;
 }
 
 
