--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header{
     background-color: black;
     color: white;
     border-radius:10px;
-    border-color: #FACC15;
+    border-color: gold;
     padding: 15px;
     margin: auto;
     font-family: Inter ,sans-serif;
@@ -86,7 +86,7 @@ main {
 .input-group input{
     width: 320px;
     height: 40px;
-    color: rgb(243, 249, 47);
+    color: gold;
     padding: 0.5px;
     font-size: 16px;
     background: transparent;
@@ -101,7 +101,7 @@ button {
   position: relative;
   width: 200px;
   height: 40px;
-  background: rgb(234, 220, 20);
+  background: gold;
   /* box-shadow: 0 0 10px rgb(226, 255, 6); */
   font-size: 16px;
   color: #000;
@@ -116,7 +116,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
     -webkit-background-clip: text;
-    -webkit-text-fill-color: rgb(243, 249, 47); /* Your text color */
+    -webkit-text-fill-color: gold; /* Your text color */
     transition: background-color 5000s ease-in-out 0s;
     background-color: transparent !important;
 }
@@ -126,7 +126,7 @@ input:-webkit-autofill:active {
     margin-bottom: 20px;
 }
 .already h5 a{
-    color: rgb(234, 220, 20);
+    color: gold;
     font-size: 15px;
     text-decoration: none;
 }
@@ -141,11 +141,11 @@ input:-webkit-autofill:active {
     margin-bottom: 15px;
 }
 .rem label input{
-    color: #FACC15;
+    color: gold;
 }
 .copyright{
     margin: 15px 15px;
-    color: rgb(234, 220, 20);
+    color: gold;
     text-align: center;
     font-size: 15px;
 }
